--- a/app/views/admin/seasons/_form.html.erb
+++ b/app/views/admin/seasons/_form.html.erb
@@ -5,8 +5,8 @@
         } %>
   
   <div class='field'>
-    <%= f.label :state_date -%>
-    <%= f.datetime_select :state_date  -%>
+    <%= f.label :start_date -%>
+    <%= f.datetime_select :start_date  -%>
   </div>
   
   <div class='field'>
