--- a/app/views/seasons/show.html.erb
+++ b/app/views/seasons/show.html.erb
@@ -6,7 +6,7 @@
   <section>
     <h1>State Date</h1>
     <p>
-      <%=raw @season.state_date %>
+      <%=raw @season.start_date %>
     </p>
   </section>
   <section>
