Ensures the override to the admin/pages controller is loaded with each request

--- a/app/views/admin/seasons/_form.html.erb
+++ b/app/views/admin/seasons/_form.html.erb
@@ -5,6 +5,11 @@
         } %>
   
   <div class='field'>
+    <%= f.label :name -%>
+    <%= f.text_field :name  -%>
+  </div>
+  
+  <div class='field'>
     <%= f.label :start_date -%>
     <%= f.datetime_select :start_date  -%>
   </div>
