Adds one-time splash page to present available seasons to a user after to logging in.

--- a/app/views/seasons/index.html.erb
+++ b/app/views/seasons/index.html.erb
@@ -2,7 +2,7 @@
   <ul id="seasons">
     <% @seasons.each do |season| %>
       <li>
-        <%= link_to season, season_path(season) %>
+      <%= link_to season.name, root_url(:set_season => season.id) %>
       </li>
     <% end %>
   </ul>
