--- a/app/views/shared/_site_bar.html.erb
+++ b/app/views/shared/_site_bar.html.erb
@@ -11,7 +11,7 @@
 
       <div id='site_bar_branding'>
         <span id='site_bar_company_name'>
-          Season: <%= Season.current.name %> // 
+          Season: <%= Season.current.try(:name) %> // 
           <%= RefinerySetting.find_or_set(:site_name, 'Company Name') %>
         </span>
 
